# realtek-dma-poc

./: CMakeLists.txt  README.md
src/: descriptor.h  dma_engine.h  error.h  exploit.cpp  exploit.h  main.cpp  mmio.h  nic.h  phys_alloc.h  raii.h  registry.cpp  registry.h
